--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # DATABASE
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=kim231109!
+spring.datasource.password=1234
 spring.datasource.url=jdbc:mysql://localhost:3306/triplan
 
 # JPA
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
