--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -22,4 +22,5 @@ jwt.token-validity-in-seconds=86400
 
 #LOG
 logging.level.org.springframework.security=DEBUG
-logging.level.com.proj.restreserve=DEBUG
+logging.level.com.proj.triplan=DEBUG
+
