--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -24,3 +24,10 @@ jwt.token-validity-in-seconds=86400
 logging.level.org.springframework.security=DEBUG
 logging.level.com.proj.triplan=DEBUG
 
+# MAIL
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${MAIL_USER_NAME}
+spring.mail.password=${MAIL_USER_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
