게시판 이미지 업로드

--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -20,6 +20,17 @@ jwt.header=${HEADER_KEY}
 jwt.secret=${SECRET_KEY}
 jwt.token-validity-in-seconds=86400
 
+# S3
+cloud.aws.credentials.accessKey=${AWS_ACCESSKEY}
+cloud.aws.credentials.secretKey=${AWS_SECRETKEY}
+cloud.aws.s3.bucketName=${BUCKET_NAME}
+cloud.aws.region.static=${REGION}
+cloud.aws.stack.auto-=false
+
+#MULTIPART
+spring.servlet.multipart.max-file-size=30MB
+spring.servlet.multipart.max-request-size=30MB
+
 #LOG
 logging.level.org.springframework.security=DEBUG
 logging.level.com.proj.triplan=DEBUG
