--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "react-kakao-maps-sdk": "^1.1.27"
+    "react-kakao-maps-sdk": "^1.1.27",
+    "react-router-dom": "^7.0.1"
   }
 }
