--- a/Front/package.json
+++ b/Front/package.json
@@ -2,7 +2,7 @@
   "name": "triplan",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8080",
+  "proxy": "http://13.209.211.218:8080",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
