--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -42,3 +42,5 @@ spring.mail.username=${MAIL_USER_NAME}
 spring.mail.password=${MAIL_USER_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
