--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -43,4 +43,8 @@ spring.mail.password=${MAIL_USER_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+#Redis
+spring.data.redis.host = 13.209.211.218
+spring.data.redis.port = 6379
+
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
