--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -44,7 +44,8 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #Redis
-spring.data.redis.host = 11
-spring.data.redis.port = 6379
+spring.data.redis.host = ${REDIS_HOST}
+spring.data.redis.port = ${REDIS_PORT}
+spring.data.redis.password= ${REDIS_PASS}
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
