--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -35,6 +35,11 @@ spring.servlet.multipart.max-request-size=30MB
 logging.level.org.springframework.security=DEBUG
 logging.level.com.proj.triplan=DEBUG
 
+# ?? ?? ?? ??
+logging.file.name=logs/app.log       # ?? ?? ?? (?? ?? ??)
+logging.file.path=logs              # ?? ?? ?? ??
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n  # ?? ?? (??)
+
 # MAIL
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
