--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -53,5 +53,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.data.redis.host = ${REDIS_HOST}
 spring.data.redis.port = ${REDIS_PORT}
 spring.data.redis.password= ${REDIS_PASS}
+spring.data.redis.repositories.enabled=false
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
