--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -31,15 +31,9 @@ cloud.aws.stack.auto-=false
 spring.servlet.multipart.max-file-size=30MB
 spring.servlet.multipart.max-request-size=30MB
 
-# ?? ?? ?? ??
-logging.file.name=logs/app.log       
-logging.file.path=logs              
-logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n  
-
-
-# ?? ?? ??
-logging.level.org.springframework=INFO
-logging.level.com.example.triplan=DEBUG
+#LOG
+logging.level.org.springframework.security=DEBUG
+logging.level.com.proj.triplan=DEBUG
 
 # MAIL
 spring.mail.host=smtp.gmail.com
