--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -18,8 +18,8 @@ spring.servlet.multipart.maxRequestSize=50MB
 # JWT
 jwt.header=${HEADER_KEY}
 jwt.secret=${SECRET_KEY}
-jwt.token-validity-in-seconds=86400
-
+jwt.access-token-validity-in-seconds: 3600
+jwt.refresh-token-validity-in-seconds: 604800
 # S3
 cloud.aws.credentials.accessKey=${AWS_ACCESSKEY}
 cloud.aws.credentials.secretKey=${AWS_SECRETKEY}
